Copy YAML files into place in Debian package

--- a/debian/install
+++ b/debian/install
@@ -4,5 +4,6 @@ gorram-cli usr/bin/
 gorram-certs usr/bin/
 gorram-server.service lib/systemd/system/
 gorram-client.service lib/systemd/system/
-config.dist.toml etc/gorram/
-client.dist.toml etc/gorram/
+config.yml.dist etc/gorram/
+client.yml.dist etc/gorram/
+clientname.yml.dist etc/gorram/conf.d
